Added status to job model & displayed list of jobs for company login

--- a/recruit/templates/recruit/404.html
+++ b/recruit/templates/recruit/404.html
@@ -4,17 +4,7 @@
 {% block content %}
 <div class="container">
     <h2>Recruitment Assistant</h2>
-    <div class="row mt-2">
-        <div class="col-12">
-            Design page for uploading resume.
-            View candidate info
-            Update info.
-            View job applies
-            View job status
-            View jobs
-        </div>
-    </div>
-
+    <p>There are some issues with your account. Please contact admin.</p>
     <p><a href="{% url 'logout' %}">Log Out</a></p>
 
 </div>
