--- a/recruit/templates/recruit/index.html
+++ b/recruit/templates/recruit/index.html
@@ -14,7 +14,7 @@
         <h2>Recruitment Assistant</h2>
         <div class="row mt-2">
             <div class="col-12">
-                <a type="submit" class="btn btn-primary" href="/accounts/login">Login</a>
+                <a type="submit" class="btn btn-primary" href="{% url 'login' %}">Login</a>
             </div>
         </div>
     </div>
