--- a/recruit/templates/recruit/index.html
+++ b/recruit/templates/recruit/index.html
@@ -1,30 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'recruit/base.html' %}
+{% block title %}Recruitment Assistant{% endblock %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-</head>
+{% block content %}
 
-<body>    
-    <div class="container">
-        <h2>Recruitment Assistant</h2>
-        <div class="row mt-2">
-            <div class="col-12">
-                <a type="submit" class="btn btn-primary" href="{% url 'login' %}">Login</a>
-            </div>
+<div class="container">
+    <h2>Recruitment Assistant</h2>
+    <div class="row mt-2">
+        <div class="col-12">
+            <a type="submit" class="btn btn-primary" href="{% url 'login' %}">Login</a>
         </div>
     </div>
+</div>
 
 
-    <style>
-        body {
-            margin: auto 30%;
-        }
-    </style>
-</body>
+<style>
+    body {
+        margin: auto 30%;
+    }
+</style>
 
-</html>
+{% endblock %}
