--- a/recruit/templates/registration/login.html
+++ b/recruit/templates/registration/login.html
@@ -1,30 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'recruit/base.html' %}
+{% block title %}Recruitment Assistant{% endblock %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-</head>
+{% block content %}
 
-<body>    
-    <div class="container">
-        <h2>Recruitment Assistant</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Log In</button>
-          </form>
-    </div>
+<div class="container">
+    <h2>Recruitment Assistant</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Log In</button>
+    </form>
+</div>
 
 
-    <style>
-        body {
-            margin: auto 30%;
-        }
-    </style>
-</body>
+<style>
+    body {
+        margin: auto 30%;
+    }
+</style>
 
-</html>
+{% endblock %}
